<?xml version="1.0"?>
<package format="2">
  <name>orbslam2_ros</name>
  <version>1.0.0</version>
  <description>ORB_SLAM2</description>

  <author>Brian Gerkey</author>
  <maintainer email="todo@email.com">Raul Mur-Artal</maintainer>
  <license>GPLv3</license>

  <url>http://ros.org/wiki/gmapping</url>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>cv_bridge</depend>
  <depend>all_process</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>

  <export>
  </export>
</package>
